--- a/package.json
+++ b/package.json
@@ -8,13 +8,13 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@kyvg/vue3-notification": "^3.3.0",
     "@mdi/font": "5.9.55",
     "@supabase/supabase-js": "^2.45.4",
     "axios": "^1.7.7",
     "core-js": "^3.8.3",
     "roboto-fontface": "*",
     "vue-router": "^4.4.5",
-    "vue-toastification": "^2.0.0-rc.5",
     "vuesax": "^4.0.1-alpha.25",
     "vuex": "^4.1.0",
     "webfontloader": "^1.6.28",
